2005-09-19  Tambet Ingo  <tambet@ximian.com>

	* glib/Opaque.cs: Set owned property in any case. Generated code
	will set owned to false after unref.

2005-09-15  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : make gtkhtml-3.8 check >= 3.8.0.
	[Fixes #76119]

2005-09-15  Mike Kestner  <mkestner@novell.com>

	* glade/Glade.metadata : mark Interface.toplevels private to allow
	manual implementation.
	* glade/Interface.custom : add manual impl for Toplevels and obsolete
	old toplevels impl.
	* glade/Makefile.am : add new custom.

2005-09-15  Mike Kestner  <mkestner@novell.com>

	* parser/gapi-fixup.cs : warn on unmatched rules.  reworked from a Dan
	Winship patch.  [Fixes #76088]

2005-09-08  Dan Winship  <danw@novell.com>

	* gtk/Gtk.metadata: Hide Gtk.Drag.SetIconDefault. Mark
	Gtk.TreeView.GetVisibleRect's arg as "out".

	* gtk/Drag.custom: gtk_drag_set_icon_default(ctx) should translate
	to Gtk.Drag.SetIconDefault(ctx), not Gtk.Drag.IconDefault = ctx.

	* gtk/TreeView.custom: add obsolete GetVisibleRect()

2005-09-07  Mike Kestner  <mkestner@novell.com>

	* bootstrap : bump version for beta2.
	* bootstrap-2.4 : bump version for beta2.

2005-09-07  Eric Butler <eric@extremeboredom.net>

	* gtk/NodeStore.cs : Add Clear() method
	* doc/en/Gtk/NodeStore.xml : Add documentation for above method

2005-09-07  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : check for monodoc sources dir and warn if we are
	configuring for a different prefix.
	* doc/Makefile.am : add install targets.

2005-09-06  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeStore.cs : fix recursive emit of row_inserted.

2005-09-02  Tambet Ingo  <tambet@ximian.com>

	* glib/Object.cs: Clean disposed flag from resurrected objects.

2005-09-02  Miguel de Icaza  <miguel@novell.com>

	* gtk/Application.cs (Invoke): Add new overloads to easily invoke
	methods on the executing thread.

2005-09-01  Miguel de Icaza  <miguel@novell.com>
