@@ -5,13 +5,16 @@ RAW_API = $(pkg)-api.raw
 ASSEMBLY_NAME = $(pkg)-sharp
 ASSEMBLY = $(ASSEMBLY_NAME).dll
 
-TARGET = $(pkg:=-sharp.dll) $(pkg:=-sharp.dll.config)
+TARGET = $(pkg:=-sharp.dll) $(pkg:=-sharp.dll.config) $(POLICY_ASSEMBLIES)
 noinst_DATA = $(TARGET)
 TARGET_API = $(pkg:=-api.xml)
 gapidir = $(datadir)/gapi-2.0
 gapi_DATA = $(TARGET_API)
-CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb generated-stamp generated/*.cs $(API) glue/generated.c $(SNK) AssemblyInfo.cs
+CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb $(POLICY_ASSEMBLIES) generated-stamp generated/*.cs $(API) glue/generated.c $(SNK) AssemblyInfo.cs $(POLICY_CONFIGS)
 DISTCLEANFILES = $(ASSEMBLY).config
+
+POLICY_ASSEMBLIES = $(addsuffix .$(ASSEMBLY), $(addprefix policy., $(POLICY_VERSIONS)))
+POLICY_CONFIGS = $(addsuffix .config, $(addprefix policy., $(POLICY_VERSIONS)))
 
 EXTRA_DIST = $(RAW_API) $(SYMBOLS) $(ASSEMBLY).config.in $(METADATA) $(customs) $(sources) $(add_dist)
 
@@ -43,6 +46,13 @@ $(SNK): $(top_srcdir)/$(SNK)
 AssemblyInfo.cs: $(top_builddir)/AssemblyInfo.cs
 	cp $(top_builddir)/AssemblyInfo.cs .
 
+$(POLICY_ASSEMBLIES): $(top_builddir)/policy.config $(SNK)
+	@for i in "$(POLICY_VERSIONS)"; do	\
+	  echo "Creating policy.$$i.$(ASSEMBLY)";	\
+	  sed -e "s/@ASSEMBLY_NAME@/$(ASSEMBLY_NAME)/" -e "s/@POLICY@/$$i/" $(top_builddir)/policy.config > policy.$$i.config;	\
+	  $(AL) -link:policy.$$i.config -out:policy.$$i.$(ASSEMBLY) -keyfile:$(SNK);	\
+	done
+
 build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
 build_references = $(addprefix /r:, $(references))
 
@@ -58,13 +68,26 @@ $(ASSEMBLY): generated-stamp $(SNK) $(build_sources) $(references)
 	$(GAPI_CDECL_INSERT)
 
 install-data-local:
-	@if test -n '$(pkg)'; then						\
-	  echo "$(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS)";	\
-	  $(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS) || exit 1;	\
+	@if test -n '$(pkg)'; then							\
+	  echo "$(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS)";				\
+	  $(GACUTIL) /i $(ASSEMBLY) /f $(GACUTIL_FLAGS) || exit 1;			\
+	  if test -n '$(POLICY_VERSIONS)'; then						\
+	    for i in $(POLICY_VERSIONS); do						\
+	      echo "$(GACUTIL) /i policy.$$i.$(ASSEMBLY) /f $(GACUTIL_FLAGS)";		\
+	      $(GACUTIL) /i policy.$$i.$(ASSEMBLY) /f $(GACUTIL_FLAGS) || exit 1;	\
+	    done									\
+	  fi										\
 	fi
 
 uninstall-local:
-	@if test -n '$(pkg)'; then						\
-	  echo "$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS)";	\
-	  $(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS) || exit 1;	\
+	@if test -n '$(pkg)'; then							\
+	  echo "$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS)";			\
+	  $(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS) || exit 1;			\
+	  if test -n '$(POLICY_VERSIONS)'; then						\
+	    for i in $(POLICY_VERSIONS); do						\
+	      echo "$(GACUTIL) /u policy.$$i.$(ASSEMBLY_NAME) $(GACUTIL_FLAGS)";	\
+	      $(GACUTIL) /u policy.$$i.$(ASSEMBLY_NAME) $(GACUTIL_FLAGS) || exit 1;	\
+	    done									\
+	  fi										\
 	fi
+
