@@ -3,6 +3,7 @@
 
 GTK_SHARP_VERSION=2.5.91
 ASSEMBLY_VERSION=2.6.0.0
+POLICY_VERSIONS=2.4
 GTK_REQUIRED_VERSION=2.6.0
 GNOME_REQUIRED_VERSION=2.10.0
 VERSIONCSDEFINES=-define:GTK_SHARP_2_6
