@@ -3,6 +3,7 @@
 
 GTK_SHARP_VERSION=2.3.91
 ASSEMBLY_VERSION=2.4.0.0
+POLICY_VERSIONS=
 GTK_REQUIRED_VERSION=2.4.0
 GNOME_REQUIRED_VERSION=2.6.0
 VERSIONCSDEFINES=
