@@ -11,6 +11,7 @@ echo "**********************************************************************"
 
 GTK_SHARP_VERSION=2.7.0.99
 ASSEMBLY_VERSION=2.8.0.0
+POLICY_VERSIONS="2.4 2.6"
 GTK_REQUIRED_VERSION=2.7.0
 GNOME_REQUIRED_VERSION=2.10.0
 VERSIONCSDEFINES="-define:GTK_SHARP_2_6 -define:GTK_SHARP_2_8"
