@@ -19,6 +19,7 @@ sed -e "s/@GTK_SHARP_VERSION@/$GTK_SHARP_VERSION/" \
     -e "s/@GNOME_REQUIRED_VERSION@/$GNOME_REQUIRED_VERSION/" \
     -e "s/@VERSIONCSDEFINES@/$VERSIONCSDEFINES/" \
     -e "s/@VERSIONCFLAGS@/$VERSIONCFLAGS/" \
+    -e "s/@POLICY_VERSIONS@/$POLICY_VERSIONS/" \
     -e "s/@ASSEMBLY_VERSION@/$ASSEMBLY_VERSION/" $srcdir/configure.in.in > $srcdir/configure.in
 
 ln -f $srcdir/pango/pango-api-$GTK_API_TAG.raw $srcdir/pango/pango-api.raw
