@@ -1,0 +1,10 @@
+<configuration>
+   <runtime>
+      <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+       <dependentAssembly>
+         <assemblyIdentity name="@ASSEMBLY_NAME@" publicKeyToken="35e10195dab3c99f" />
+         <bindingRedirect oldVersion="@POLICY@.0.0" newVersion="@API_VERSION@"/>
+       </dependentAssembly>
+      </assemblyBinding>
+   </runtime>
+</configuration>
