@@ -1,3 +1,11 @@
+2005-09-21  Mike Kestner  <mkestner@novell.com>
+
+	* bootstrap* : expose POLICY_VERSIONS variable.
+	* configure.in.in : AC_SUBST new POLICY_VERSIONS.
+	* Makefile.include : build/install policy assemblies.
+	* policy.config.in : policy config skeleton.
+	* */Makefile.am : ditto.
+
 2005-09-19  Tambet Ingo  <tambet@ximian.com>
 
 	* glib/Opaque.cs: Set owned property in any case. Generated code
